# RBE-500-Foundations-Of-Robotics

./: .gitignore  README.md
install/: local_setup.sh  setup.sh
install/cmake_modules/share/cmake_modules/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/cmake_modules/share/cmake_modules/cmake/: cmake_modules-extras.cmake  (+3 more)
install/dynamixel_workbench/share/dynamixel_workbench/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/dynamixel_workbench_toolbox/include/dynamixel_workbench_toolbox/: dynamixel_driver.h  dynamixel_item.h  dynamixel_tool.h  dynamixel_workbench.h
install/dynamixel_workbench_toolbox/share/dynamixel_workbench_toolbox/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/interfaces_pkg/share/interfaces_pkg/: package.bash  package.zsh
install/open_manipulator/share/open_manipulator/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/open_manipulator_msgs/share/open_manipulator_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/open_manipulator_x_controller/lib/open_manipulator_x_controller/: create_udev_rules  open_manipulator_x_controller
install/open_manipulator_x_controller/share/open_manipulator_x_controller/: 99-open-manipulator-cdc.rules  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/open_manipulator_x_description/share/open_manipulator_x_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/open_manipulator_x_libs/include/open_manipulator_x_libs/: custom_trajectory.hpp  dynamixel.hpp  kinematics.hpp  open_manipulator_x.hpp
install/open_manipulator_x_libs/share/open_manipulator_x_libs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/rbe500-example/lib/rbe500-example/: basic_robot_control
install/rbe500-example/share/rbe500-example/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/rbe500_example_py/share/rbe500_example_py/: package.sh  package.xml
install/robotis_manipulator/include/robotis_manipulator/: robotis_manipulator.h  robotis_manipulator_common.h  robotis_manipulator_log.h  robotis_manipulator_manager.h  robotis_manipulator_math.h  robotis_manipulator_trajectory_generator.h
install/robotis_manipulator/share/robotis_manipulator/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/team_project/lib/team_project/: fwd_kinematics  inv_kinematics
install/team_project/share/team_project/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
src/RBE_500_final/: package.xml  setup.cfg  setup.py
src/RBE_500_final/RBE_500_final/: constants.py  fwd_kinematics.py  inv_kinematics_srv.py  utils.py
src/interfaces_pkg/: CMakeLists.txt  package.xml
src/interfaces_pkg/srv/: InverseKinematics.srv
src/team_project/: package.xml  setup.py
src/team_project/team_project/: constants.py  fwd_kinematics.py  utils.py
(+288 files in other folders)
