<?xml version="1.0"?>
<package format="3">
  <name>interfaces_pkg</name>
  <version>0.0.1</version>
  <description>Custom interfaces (msgs/srvs) for RBE-500</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <!-- Build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Generators (build-time) -->
  <build_depend>rosidl_default_generators</build_depend>

  <!-- Runtime for generated code -->
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- If your .srv/.msg reference these, keep them -->
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <!-- <depend>builtin_interfaces</depend> -->

  <!-- REQUIRED for interface packages -->
  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
